--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -1,9 +1,9 @@
 <h1 class="title" data-bind="title"></h1>
 
-<!-- <h2 class="value"> Open issues: <span data-bind="open"></span><i data-bind-class="arrow"></i></h2>
+<h2 class="value"> Open issues: <span data-bind="open"></span><i data-bind-class="arrow"></i></h2>
 <h2 class="value"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h2>
 <h2 class="value"> Ready to Inspect: <span data-bind="ready"></span><i data-bind-class="arrow"></i></h2>
-<h2 class="value"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h2> -->
+<h2 class="value"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h2>
 
 <p class="more-info" data-bind="moreinfo"></p>
 
