--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -1,10 +1,11 @@
 <h1 class="title" data-bind="title"></h1>
 
 <h2 class="primary" data-bind="open"><i data-bind-class="arrow"></i></h2>
-<h2 class="primary"> Open issues></h2>
-<h3 class="secondary"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h3>
-<h3 class="secondary"> Ready to Inspect: <span data-bind="ready"></span><i data-bind-class="arrow"></i></h3>
-<h3 class="secondary"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h3>
+<h3 class="secondary"> Open Issues</h3>
+
+<h3 class="secondary"> Work Complete: <span data-bind="complete" data-bind-class="arrow"></span></h3>
+<h3 class="secondary"> Ready to Inspect: <span data-bind="ready" data-bind-class="arrow"></span></h3>
+<h3 class="secondary"> Closed: <span data-bind="closed" data-bind-class="arrow"></span></h3>
 
 <p class="more-info" data-bind="moreinfo"></p>
 
