--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -3,7 +3,7 @@
 <h2 class="primary" data-bind="open"><i data-bind-class="arrow"></i></h2>
 <h3 class="secondary"> Open Issues </h3>
 
-<h3 class="secondary"> Work Complete: <span data-bind="complete"</span><i data-bind-class="arrow"></i></h3>
+<h3 class="secondary"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h3>
 <h3 class="secondary"> Ready to Inspect: <span data-bind="ready"></span><i data-bind-class="arrow"></i></h3>
 <h3 class="secondary"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h3>
 
