--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -1,18 +1,11 @@
 <h1 class="title" data-bind="title"></h1>
 
-<<<<<<< HEAD
 <h2 class="primary" data-bind="open"><i data-bind-class="arrow"></i></h2>
-<h3 class="secondary"> Open Issues </h3>
+<h2 class="primary"> Open Issues </h2>
 
 <h3 class="secondary"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h3>
 <h3 class="secondary"> Ready to Inspect: <span data-bind="ready"></span><i data-bind-class="arrow"></i></h3>
 <h3 class="secondary"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h3>
-=======
-<h2 class="value"> Open issues: <span data-bind="open"></span><i data-bind-class="arrow"></i></h2>
-<h2 class="value"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h2>
-<h2 class="value"> Ready to Inspect: <span data-bind="ready"></span><i data-bind-class="arrow"></i></h2>
-<h2 class="value"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h2>
->>>>>>> parent of ec56aa5... Format widget
 
 <p class="more-info" data-bind="moreinfo"></p>
 
