--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -1,6 +1,6 @@
 <h1 class="title" data-bind="title"></h1>
 
-<h2 class="primary" data-bind="open"><i data-bind-class="arrow"></i></h2>
+<h2 class="value" data-bind="open"><i data-bind-class="arrow"></i></h2>
 <h2 class="primary"> Open Issues </h2>
 
 <h3 class="secondary"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h3>
