--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -1,12 +1,10 @@
 <h1 class="title" data-bind="title"></h1>
 
 <h2 class="value" data-bind="open"><i data-bind-class="arrow"></i></h2>
-<h2 class="primary"> Open Issues </h2>
+<h2 class="primary"> Open Issues </h2><br>
 
-<h3 class="secondary"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h3>
-<h3 class="secondary"> Ready to Inspect: <span data-bind="ready"></span><i data-bind-class="arrow"></i></h3>
-<h3 class="secondary"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h3>
+<h2 class="secondary"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h2>
+<h2 class="secondary"> Ready to Inspect: <span data-bind="ready"></span><i data-bind-class="arrow"></i></h2>
+<h2 class="secondary"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h2>
 
 <p class="more-info" data-bind="moreinfo"></p>
-
-<p class="updated-at" data-bind="updatedAtMessage"></p>
