--- a/dockerfiles/dashing/widgets/list/list.html
+++ b/dockerfiles/dashing/widgets/list/list.html
@@ -8,7 +8,7 @@
 </ol>
 
 <ul class="list-nostyle">
-  <li data-foreach-item="items">
+  <li data-foreach-item="items.sortedByDescending.value">
     <span class="label" data-bind="item.label"></span>
     <span class="value" data-bind="item.value"></span>
   </li>
