--- a/dockerfiles/dashing/widgets/list/list.html
+++ b/dockerfiles/dashing/widgets/list/list.html
@@ -1,7 +1,7 @@
 <h1 class="title" data-bind="title"></h1>
 
 <ol>
-  <li data-foreach-item="items.sortedByDescending.value">
+  <li data-foreach-item="items">
     <span class="label" data-bind="item.label"></span>
     <span class="value" data-bind="item.value"></span>
   </li>
