--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -3,6 +3,6 @@
 <h2 class="value" data-bind="open"><i data-bind-class="arrow"></i></h2>
 <h2 class="primary"> Open Issues </h2><br>
 
-<h2 class="secondary"> Work Complete: <span data-bind="complete"></span><i data-bind-class="arrow"></i></h2>
-<h2 class="secondary"> Ready to Inspect: <span data-bind="ready"></span><i data-bind-class="arrow"></i></h2>
-<h2 class="secondary"> Closed: <span data-bind="closed"></span><i data-bind-class="arrow"></i></h2>
+<h2 class="secondary"> Work Complete: <span class="secondaryValue" data-bind="complete"></span><i data-bind-class="arrow"></i></h2>
+<h2 class="secondary"> Ready to Inspect: <span class="secondaryValue" data-bind="ready"></span><i data-bind-class="arrow"></i></h2>
+<h2 class="secondary"> Closed: <span class="secondaryValue" data-bind="closed"></span><i data-bind-class="arrow"></i></h2>
