--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -1,7 +1,7 @@
 <h1 class="title" data-bind="title"></h1>
 
 <h2 class="value" data-bind="open"><i data-bind-class="arrow"></i></h2>
-<h2 class="primary"> Open Issues </h2><br>
+<h2 class="primary"> Open Issues </h2>
 
 <h2 class="secondary"> Work Complete: <span class="secondaryValue" data-bind="complete"></span><i data-bind-class="arrow"></i></h2>
 <h2 class="secondary"> Ready to Inspect: <span class="secondaryValue" data-bind="ready"></span><i data-bind-class="arrow"></i></h2>
