--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.html
@@ -1,20 +1,20 @@
 <h1 class="title" data-bind="title"></h1>
 
-<h2 class="value" data-bind="open"><i data-bind-class="arrow"></i></h2>
+<h2 class="value" data-bind="primary"><i data-bind-class="arrow"></i></h2>
 <h2 class="primary"> Open Issues </h2>
 
 <div class="status">
-	<span class="secondaryValue" data-bind="complete"></span> 
-	<span class="secondary">Work Complete: </span> 
-	<!-- <i data-bind-class="arrow"></i>--> 
+	<span class="secondaryValue" data-bind="secondary_top"></span>
+	<span class="secondary" data-bind="secondary_top_text"></span>
+	<!-- <i data-bind-class="arrow"></i>-->
 </div>
 <div class="status">
-	<span class="secondaryValue" data-bind="ready"></span>    
-	<span class="secondary">Ready to Inspect: </span> 
-	<!-- <i data-bind-class="arrow"></i>--> 
+	<span class="secondaryValue" data-bind="secondary_middle"></span>
+	<span class="secondary" data-bind="secondary_middle_text"></span>
+	<!-- <i data-bind-class="arrow"></i>-->
 </div>
 <div class="status">
-	<span class="secondaryValue" data-bind="closed"></span>   
-	<span class="secondary">Closed: </span> 
-	<!-- <i data-bind-class="arrow"></i>--> 
+	<span class="secondaryValue" data-bind="secondary_bottom"></span>
+	<span class="secondary" data-bind="secondary_bottom_text"></span>
+	<!-- <i data-bind-class="arrow"></i>-->
 </div>
